Fixes for search bar widths on mobiles (it was off the screen to the right and needed some fixing). Fixes for position of new search input bar on search-page so the bar is aligned with the top of the sidebar/sub-menu/criteria box on the left when they are in the two column view.

--- a/app/assets/stylesheets/pages/_buy_mobile.sass
+++ b/app/assets/stylesheets/pages/_buy_mobile.sass
@@ -34,6 +34,9 @@
 		width: 60px !important
 	.tweetImage
 		margin: 0 !important
+	.state-selection-column
+	// Fix for state selector going over the page on buy page
+		padding-right: 6em !important
 //stats different size views
 @media only screen and (max-width: 560px)
 	.stats-section
